--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+    "@types/mysql": "^2.15.5",
     "angular-in-memory-web-api": "^0.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "mysql": "^2.16.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
@@ -41,7 +43,7 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
