--- a/V3-Angular/package.json
+++ b/V3-Angular/package.json
@@ -31,7 +31,9 @@
     "angular-in-memory-web-api": "^0.7.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "moment": "^2.23.0",
     "mysql": "^2.16.0",
+    "ngx-moment": "^3.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
